--- a/package.json
+++ b/package.json
@@ -3,9 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "aws-sdk": "^2.223.1",
+    "firebase": "^4.12.1",
+    "firebase-tools": "^3.17.6",
+    "firebaseui": "^2.7.0",
+    "mailgun-js": "^0.16.0",
+    "material-ui": "^0.20.0",
+    "papaparse": "^4.3.7",
+    "query-string": "^6.0.0",
+    "react": "^16.2.0",
+    "react-audioplayer": "^0.3.1",
+    "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.9",
+    "react-files": "^2.4.3",
+    "react-firebase-ui": "^1.0.0",
+    "react-firebaseui": "^1.2.3",
+    "react-loader-spinner": "^1.4.7",
+    "react-mic": "^9.1.2",
+    "react-modal": "^3.3.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.1",
+    "react-toggle": "^4.0.2",
+    "redux": "^3.7.2",
+    "redux-audio": "^1.0.0",
+    "redux-audio-fixed": "^1.1.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
